Auth Updates - Twitter, Google, and GitHub!
Added new authentication types to the site, added mobile login, and
fixed a bug with urls getting undefined

--- a/assets/stylesheets/internal/_sass/_colors.scss
+++ b/assets/stylesheets/internal/_sass/_colors.scss
@@ -1,6 +1,6 @@
-$social_facebook: #3B5998;
 $social_twitter:  #00ACED;
-$social_google:   #DD4B39;
+$social_google:   #4285f4;
+$social_github:   #232323;
 
 $category_home: #3AAFB9;
 $category_all: #FF6F59;
@@ -14,7 +14,7 @@ $category_misc: #E7B03D;
 
 $logo_background: #f8faff;
 
-$header_background: #f1f5fd;
+$header_background: #242B34;
 $header_link_color: #414E57;
 
 $search_input_background:  #dee2e8;
