--- a/assets/stylesheets/internal/_sass/_content.scss
+++ b/assets/stylesheets/internal/_sass/_content.scss
@@ -136,7 +136,7 @@
 
       #promoted {
 
-        float: left;
+        float: right;
         z-index: 20;
         display: inline-block;
 
@@ -561,7 +561,7 @@
 
                 &:hover {
 
-                  color: #3CABFF;
+                  color: $social_google;
 
                 }
 
