--- a/assets/stylesheets/internal/_sass/_modal.scss
+++ b/assets/stylesheets/internal/_sass/_modal.scss
@@ -1,11 +1,251 @@
-modal {
+#modal-container {
 
-  z-index: -9999;
-  display: block;
+  top:  0px;
+  left: 0px;
+  z-index: -99999;
   position: fixed;
+  background: rgba(black, 0.7);
 
+  @include size(100%);
   @include opacity(0);
-  @include position(center);
   @include transition(opacity, 0.5s, ease);
+
+  &[data-visible="true"] {
+
+    z-index: 99999;
+
+    @include opacity(1);
+
+  }
+
+  modal.modal-window {
+
+    display: block;
+    position: fixed;
+    background: rgba(white, 1);
+
+    @include opacity(0);
+    @include size(400px, auto);
+    @include position(center, -40%);
+    @include transition(all, 0.5s, ease);
+
+    @media(max-width: $mobile_break) {
+
+      max-width: 100%;
+      max-height: 100%;
+      overflow-y: auto;
+
+      @include size(100%);
+
+    }
+
+    &[data-visible="true"] {
+
+      @include opacity(1);
+      @include position(center);
+
+      @include transition(all, 0.5s, ease);
+
+    }
+
+    &[data-visible="false"] {
+
+      @include opacity(0);
+      @include position(center, -40%);
+
+      @include transition(all, 0.5s, ease);
+
+    }
+
+    .modal-header,
+    .modal-content {
+
+      float: left;
+      clear: both;
+      padding: 2em;
+      display: block;
+      position: relative;
+
+      @include size(100%, auto);
+
+    }
+
+    .modal-header {
+
+      color: rgba(white, 1);
+      background: rgba($header_background, 1);
+
+      h1 {
+
+        float: left;
+        color: white;
+        line-height: 1;
+        font-weight: 800;
+        font-size: 1.25em;
+        padding-right: 32px;
+        display: inline-block;
+        letter-spacing: 0.245em;
+        text-transform: uppercase;
+
+        span {
+
+          color: white;
+          font-weight: 300;
+
+        }
+
+      }
+
+      .close-modal-button {
+
+        top: 0em;
+        right: 0em;
+        border: 0px;
+        margin: 0px;
+        padding: 0px;
+        float: right;
+        color: white;
+        font-size: 16px;
+        line-height: 2em;
+        text-align: center;
+        position: absolute;
+        background: transparent;
+
+        @include size(2em);
+        // @include position(0px, center);
+
+      }
+
+    }
+
+    .modal-content {
+
+      p {
+
+        float: left;
+        clear: both;
+        display: block;
+        line-height: 1.35;
+
+        &.clear {
+
+          margin-bottom: 2em;
+
+        }
+
+        &.release {
+
+          font-size: 10px;
+          color: rgba(black, 0.65);
+
+        }
+
+        &.border-bottom {
+
+          margin-bottom: 2em;
+          padding-bottom: 2em;
+          border-bottom: 3px double rgba(black, 0.15);
+
+        }
+
+        &.border-top {
+
+          margin-top: 2em;
+          padding-top: 2em;
+          border-top: 3px double rgba(black, 0.15);
+
+        }
+
+        &.no-border {
+
+          border-color: transparent;
+
+        }
+
+      }
+
+      .auth-button {
+
+        float: left;
+        clear: both;
+        border: 0px;
+        outline: none;
+        display: block;
+        padding: 1em 0em;
+        margin-bottom: 1em;
+        text-align: center;
+        color: rgba(white, 1);
+        border-radius: $user_avatar_size;
+
+        @include size(100%, auto);
+
+        &:last-child {
+
+          margin-bottom: 0em;
+
+        }
+
+        &[data-auth="twitter"] {
+
+          background: rgba($social_twitter, 1);
+
+          &:hover,
+          &:focus {
+
+            background: lighten($social_twitter, 5%);
+
+          }
+
+        }
+
+        &[data-auth="google"] {
+
+          background: rgba($social_google, 1);
+
+          &:hover,
+          &:focus {
+
+            background: lighten($social_google, 5%);
+
+          }
+
+        }
+
+        &[data-auth="github"] {
+
+          background: rgba($social_github, 1);
+
+          &:hover,
+          &:focus {
+
+            background: lighten($social_github, 5%);
+
+          }
+
+        }
+
+        span {
+
+          &.fa {
+
+            font-size: 1.25em;
+            margin-right: 10px;
+
+          }
+
+          &.auth-button-label {
+
+            font-size: 13px;
+            font-weight: 600;
+
+          }
+
+        }
+
+      }
+
+    }
+
+  }
 
 }
