--- a/assets/stylesheets/internal/compiled/style.css
+++ b/assets/stylesheets/internal/compiled/style.css
@@ -265,6 +265,9 @@ table {
       #page-header #logo-container h1 span {
         color: white;
         font-weight: 300; }
+      @media (max-width: 600px) {
+        #page-header #logo-container h1 {
+          font-size: 1.35em; } }
     #page-header #logo-container h2 {
       color: #858585;
       font-size: 9px;
@@ -272,32 +275,10 @@ table {
       margin-top: 3px;
       letter-spacing: 0.55px;
       text-transform: uppercase; }
-  #page-header #toggle-mobile-menu {
-    top: 50%;
-    right: 1.5em;
-    border: 0px;
-    display: none;
-    position: absolute;
-    border-radius: 3px;
-    padding: 8px 6px;
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.15);
-    top: 50% !important;
-    -webkit-transform: translate(0px, -50%);
-    -ms-transform: translate(0px, -50%);
-    transform: translate(0px, -50%); }
-    @media (max-width: 600px) {
-      #page-header #toggle-mobile-menu {
-        display: block; } }
-    #page-header #toggle-mobile-menu .bar {
-      float: left;
-      clear: both;
-      display: block;
-      background: white;
-      width: 2em;
-      height: 0.15em; }
-      #page-header #toggle-mobile-menu .bar:nth-child(even) {
-        margin: 0.45em 0px; }
+      @media (max-width: 600px) {
+        #page-header #logo-container h2 {
+          font-size: 0.8em;
+          letter-spacing: 0.18em; } }
   #page-header #header-container {
     float: left;
     padding: 1.5em 2em;
@@ -307,7 +288,34 @@ table {
     height: 100%; }
     @media (max-width: 600px) {
       #page-header #header-container {
-        display: none; } }
+        right: 0px;
+        position: absolute;
+        padding: 1.5em 1em 1.5em 0em;
+        width: auto;
+        height: 100%; } }
+    #page-header #header-container #toggle-mobile-menu {
+      float: left;
+      border: 0px;
+      right: 1.5em;
+      display: none;
+      padding: 8px 6px;
+      border-radius: 3px;
+      background: transparent;
+      border: 1px solid rgba(255, 255, 255, 0.15); }
+      #page-header #header-container #toggle-mobile-menu:hover, #page-header #header-container #toggle-mobile-menu:focus {
+        border-color: rgba(255, 255, 255, 0.25); }
+      @media (max-width: 600px) {
+        #page-header #header-container #toggle-mobile-menu {
+          display: inline-block; } }
+      #page-header #header-container #toggle-mobile-menu .bar {
+        float: left;
+        clear: both;
+        display: block;
+        background: white;
+        width: 2em;
+        height: 0.15em; }
+        #page-header #header-container #toggle-mobile-menu .bar:nth-child(even) {
+          margin: 0.45em 0px; }
     #page-header #header-container #header-main-nav {
       float: left;
       margin-right: 2em;
@@ -343,6 +351,9 @@ table {
       display: inline-block;
       width: auto;
       height: 100%; }
+      @media (max-width: 600px) {
+        #page-header #header-container #search-form {
+          display: none; } }
       #page-header #header-container #search-form #search-icon {
         top: 0px;
         left: 0px;
@@ -666,7 +677,7 @@ aside {
         -ms-transition: all 0.265s ease 0s;
         transition: all 0.265s ease 0s; }
       #content #content-header #content-promotion-container #promoted {
-        float: left;
+        float: right;
         z-index: 20;
         display: inline-block;
         width: 100% !important;
@@ -948,7 +959,7 @@ aside {
                 margin-left: 10px;
                 display: inline-block; }
               #content #tools-list li .tool .actions li .tool-action[data-action="share"]:hover {
-                color: #3CABFF; }
+                color: #4285f4; }
 @-webkit-keyframes heartBlast {
   0% {
     background-position: left; }
@@ -1067,21 +1078,167 @@ footer {
       footer #footer-content p.float-right {
         float: right; }
 
-modal {
-  z-index: -9999;
-  display: block;
+#modal-container {
+  top: 0px;
+  left: 0px;
+  z-index: -99999;
   position: fixed;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
   opacity: 0;
   filter: alpha(opacity=0);
-  left: 50% !important;
-  top: 50% !important;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
   -webkit-transition: opacity 0.5s ease 0s;
   -moz-transition: opacity 0.5s ease 0s;
   -ms-transition: opacity 0.5s ease 0s;
   transition: opacity 0.5s ease 0s; }
+  #modal-container[data-visible="true"] {
+    z-index: 99999;
+    opacity: 1;
+    filter: alpha(opacity=100); }
+  #modal-container modal.modal-window {
+    display: block;
+    position: fixed;
+    background: white;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    width: 400px;
+    height: auto;
+    left: 50% !important;
+    -webkit-transform: translate(-50%, -40%);
+    -ms-transform: translate(-50%, -40%);
+    transform: translate(-50%, -40%);
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -ms-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s; }
+    @media (max-width: 600px) {
+      #modal-container modal.modal-window {
+        max-width: 100%;
+        max-height: 100%;
+        overflow-y: auto;
+        width: 100%;
+        height: 100%; } }
+    #modal-container modal.modal-window[data-visible="true"] {
+      opacity: 1;
+      filter: alpha(opacity=100);
+      left: 50% !important;
+      top: 50% !important;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      -webkit-transition: all 0.5s ease 0s;
+      -moz-transition: all 0.5s ease 0s;
+      -ms-transition: all 0.5s ease 0s;
+      transition: all 0.5s ease 0s; }
+    #modal-container modal.modal-window[data-visible="false"] {
+      opacity: 0;
+      filter: alpha(opacity=0);
+      left: 50% !important;
+      -webkit-transform: translate(-50%, -40%);
+      -ms-transform: translate(-50%, -40%);
+      transform: translate(-50%, -40%);
+      -webkit-transition: all 0.5s ease 0s;
+      -moz-transition: all 0.5s ease 0s;
+      -ms-transition: all 0.5s ease 0s;
+      transition: all 0.5s ease 0s; }
+    #modal-container modal.modal-window .modal-header,
+    #modal-container modal.modal-window .modal-content {
+      float: left;
+      clear: both;
+      padding: 2em;
+      display: block;
+      position: relative;
+      width: 100%;
+      height: auto; }
+    #modal-container modal.modal-window .modal-header {
+      color: white;
+      background: #242b34; }
+      #modal-container modal.modal-window .modal-header h1 {
+        float: left;
+        color: white;
+        line-height: 1;
+        font-weight: 800;
+        font-size: 1.25em;
+        padding-right: 32px;
+        display: inline-block;
+        letter-spacing: 0.245em;
+        text-transform: uppercase; }
+        #modal-container modal.modal-window .modal-header h1 span {
+          color: white;
+          font-weight: 300; }
+      #modal-container modal.modal-window .modal-header .close-modal-button {
+        top: 0em;
+        right: 0em;
+        border: 0px;
+        margin: 0px;
+        padding: 0px;
+        float: right;
+        color: white;
+        font-size: 16px;
+        line-height: 2em;
+        text-align: center;
+        position: absolute;
+        background: transparent;
+        width: 2em;
+        height: 2em; }
+    #modal-container modal.modal-window .modal-content p {
+      float: left;
+      clear: both;
+      display: block;
+      line-height: 1.35; }
+      #modal-container modal.modal-window .modal-content p.clear {
+        margin-bottom: 2em; }
+      #modal-container modal.modal-window .modal-content p.release {
+        font-size: 10px;
+        color: rgba(0, 0, 0, 0.65); }
+      #modal-container modal.modal-window .modal-content p.border-bottom {
+        margin-bottom: 2em;
+        padding-bottom: 2em;
+        border-bottom: 3px double rgba(0, 0, 0, 0.15); }
+      #modal-container modal.modal-window .modal-content p.border-top {
+        margin-top: 2em;
+        padding-top: 2em;
+        border-top: 3px double rgba(0, 0, 0, 0.15); }
+      #modal-container modal.modal-window .modal-content p.no-border {
+        border-color: transparent; }
+    #modal-container modal.modal-window .modal-content .auth-button {
+      float: left;
+      clear: both;
+      border: 0px;
+      outline: none;
+      display: block;
+      padding: 1em 0em;
+      margin-bottom: 1em;
+      text-align: center;
+      color: white;
+      border-radius: 40px;
+      width: 100%;
+      height: auto; }
+      #modal-container modal.modal-window .modal-content .auth-button:last-child {
+        margin-bottom: 0em; }
+      #modal-container modal.modal-window .modal-content .auth-button[data-auth="twitter"] {
+        background: #00aced; }
+        #modal-container modal.modal-window .modal-content .auth-button[data-auth="twitter"]:hover, #modal-container modal.modal-window .modal-content .auth-button[data-auth="twitter"]:focus {
+          background: #08bbff; }
+      #modal-container modal.modal-window .modal-content .auth-button[data-auth="google"] {
+        background: #4285f4; }
+        #modal-container modal.modal-window .modal-content .auth-button[data-auth="google"]:hover, #modal-container modal.modal-window .modal-content .auth-button[data-auth="google"]:focus {
+          background: #5a95f5; }
+      #modal-container modal.modal-window .modal-content .auth-button[data-auth="github"] {
+        background: #232323; }
+        #modal-container modal.modal-window .modal-content .auth-button[data-auth="github"]:hover, #modal-container modal.modal-window .modal-content .auth-button[data-auth="github"]:focus {
+          background: #303030; }
+      #modal-container modal.modal-window .modal-content .auth-button span.fa {
+        font-size: 1.25em;
+        margin-right: 10px; }
+      #modal-container modal.modal-window .modal-content .auth-button span.auth-button-label {
+        font-size: 13px;
+        font-weight: 600; }
+
+@media (max-width: 600px) {
+  .hide-mobile {
+    display: none; } }
 
 body {
   font-size: 13px;
@@ -1089,11 +1246,14 @@ body {
   font-family: "Open Sans", sans-serif;
   background: whitesmoke; }
   body a, body button, body .link, body .pointer {
+    outline: none;
     cursor: pointer;
     -webkit-transition: all 0.265s ease 0s;
     -moz-transition: all 0.265s ease 0s;
     -ms-transition: all 0.265s ease 0s;
     transition: all 0.265s ease 0s; }
+    body a *, body button *, body .link *, body .pointer * {
+      cursor: inherit; }
   body #main {
     float: left;
     outline: none;
@@ -1104,97 +1264,89 @@ body {
 #user-info {
   float: right;
   display: none;
-  cursor: pointer;
   position: relative;
   background: #2a343c;
-  display: inline-block;
   border-radius: 40px;
   padding: 0px 20px 0px 0px; }
+  @media (max-width: 600px) {
+    #user-info {
+      float: left;
+      padding: 0px;
+      margin: -2px 0em 0em 1em;
+      width: auto;
+      height: auto; } }
+  #user-info:hover, #user-info:focus {
+    background: #35414b; }
+    #user-info:hover #user-avatar, #user-info:focus #user-avatar {
+      border-color: #35414b; }
   #user-info #user-avatar,
   #user-info #user-name {
-    z-index: 1;
     float: left;
-    cursor: pointer;
+    color: white;
     position: relative;
     display: inline-block;
-    line-height: 40px;
-    width: auto;
-    height: 40px; }
+    line-height: 40px; }
   #user-info #user-avatar {
     border-radius: 100%;
-    border: 5px solid #2a343c;
-    margin-right: 10px; }
+    display: inline-block;
+    margin: 5px 12px 5px 5px;
+    background: rgba(0, 0, 0, 0.25);
+    width: 30px;
+    height: 30px; }
+    @media (max-width: 600px) {
+      #user-info #user-avatar {
+        margin: 5px; } }
   #user-info #user-name {
-    color: white;
     font-size: 13px;
     font-weight: 600; }
-  #user-info #user-dropper {
-    z-index: 1;
-    float: left;
-    color: white;
-    margin-left: 10px;
-    position: relative;
-    display: none;
-    line-height: 40px; }
-  #user-info #user-menu {
-    top: 100%;
-    right: 0px;
-    z-index: 0;
-    display: none;
-    margin-top: -2em;
-    background: #2a343c;
-    position: absolute;
-    padding: 2em 0em;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    width: 100%;
-    height: auto; }
-    #user-info #user-menu li {
-      float: left;
-      clear: both;
-      padding: 1em;
-      color: white;
-      position: relative;
-      display: inline-block;
-      width: 100%;
-      height: auto; }
+    @media (max-width: 600px) {
+      #user-info #user-name {
+        display: none; } }
 
-#twitter-login {
+#site-login {
   border: 0px;
   float: right;
-  display: none;
   outline: none;
+  display: none;
   overflow: hidden;
   position: relative;
-  display: inline-block;
-  padding: 1em 1em 1em 4em;
-  background: #00ACED;
+  background: #4285f4;
   border-radius: 40px;
   padding: 0px 20px 0px 0px;
   width: auto;
   height: 100%; }
+  #site-login:hover, #site-login:focus {
+    background: #5a95f5; }
   @media (max-width: 600px) {
-    #twitter-login {
+    #site-login {
       float: left;
-      width: 100%;
+      padding: 0px;
+      margin-top: -2px;
+      margin: -2px 0em 0em 1em;
+      width: auto;
       height: auto; } }
-  #twitter-login h2, #twitter-login .fa {
+  #site-login span {
     float: left;
     color: white;
     position: relative;
     display: inline-block;
     line-height: 40px; }
-  #twitter-login h2 {
-    font-size: 13px;
-    font-weight: 600; }
-  #twitter-login .fa {
-    font-size: 1.25em;
-    text-align: center;
-    margin-right: 10px;
-    border-radius: 100%;
-    display: inline-block;
-    border: 5px solid #00ACED;
-    background: rgba(0, 0, 0, 0.25);
-    line-height: 32px;
-    width: 40px;
-    height: 40px; }
+    #site-login span#login-label {
+      font-size: 13px;
+      font-weight: 600; }
+      @media (max-width: 600px) {
+        #site-login span#login-label {
+          display: none; } }
+    #site-login span.fa {
+      line-height: 32px;
+      font-size: 1.25em;
+      text-align: center;
+      border-radius: 100%;
+      display: inline-block;
+      margin: 5px 12px 5px 5px;
+      background: rgba(0, 0, 0, 0.25);
+      width: 30px;
+      height: 30px; }
+      @media (max-width: 600px) {
+        #site-login span.fa {
+          margin: 5px; } }
